--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "chart.js": "2.9.3",
+    "chartjs-plugin-datalabels": "0.7.0",
+    "css-loader": "3.5.3",
+    "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "flatpickr": "4.6.3",
+    "he": "1.2.0",
+    "moment": "2.25.3",
+    "moment-locales-webpack-plugin": "1.2.0",
+    "nanoid": "3.1.9",
+    "style-loader": "1.2.1",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
